--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,9 +4,34 @@
   </ion-toolbar>
 </ion-header>
 
+<div *ngIf="loading">
+  <!-- Indication de chargement -->
+  <ion-spinner></ion-spinner>
+</div>
+
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" *ngFor="let product of scannedProducts">
+        <ion-item
+          (click)="afficherDetail(product)"
+          lines="none"
+          class="product-item"
+        >
+          <img [src]="product.image" class="product-image" />
+          <ion-label class="product-label"
+            >Marque : {{ product.brand }}</ion-label
+          >
+          <ion-label class="product-label">Score: {{product.score}}</ion-label>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-toast></ion-toast>
+
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button (click)="startScan()" >
+    <ion-fab-button (click)="startScan()">
       <ion-icon name="scan"></ion-icon>
     </ion-fab-button>
   </ion-fab>
