--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,16 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
-
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
-}
+.product-item {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+  }
+  
+  .product-image {
+    width: 100px; /* ou toute autre taille souhaitée */
+    height: 100px; /* ou toute autre taille souhaitée */
+    margin-right: 10px;
+  }
+  
+  .product-label {
+    flex: 1;
+  }
+  
