--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Barcode Scanner</ion-title>
+    <ion-title>Yuka 2</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<div *ngIf="loading">
-  <!-- Indication de chargement -->
-  <ion-spinner></ion-spinner>
-</div>
+<ion-content *ngIf="!scannedProducts">bienvenue</ion-content>
 
 <ion-content>
   <ion-grid>
@@ -20,13 +17,17 @@
         >
           <img [src]="product.image" class="product-image" />
           <ion-label class="product-label"
-            >Marque : {{ product.brand }}</ion-label
+            >{{ product.brand }}</ion-label
           >
-          <ion-label class="product-label">Score: {{product.score}}</ion-label>
+          <ion-label *ngIf="product.score" class="product-label">Score: {{product.score}}</ion-label>
         </ion-item>
       </ion-col>
     </ion-row>
   </ion-grid>
+
+  <div *ngIf="loading">
+    <ion-spinner></ion-spinner>
+  </div>
 
   <ion-toast></ion-toast>
 
