--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,11 +6,16 @@
   
   .product-image {
     width: 100px; /* ou toute autre taille souhaitée */
-    height: 100px; /* ou toute autre taille souhaitée */
+    height: 150px; /* ou toute autre taille souhaitée */
     margin-right: 10px;
   }
   
   .product-label {
     flex: 1;
   }
-  
+  .ion-spinner {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }  
