--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -187,7 +187,7 @@
     }
   
     .ios ion-modal {
-      --ion-background-color: var(--ion-color-step-100);
+      --ion-background-color: transparent;
       --ion-toolbar-background: var(--ion-color-step-150);
       --ion-toolbar-border-color: var(--ion-color-step-250);
     }
